Gateway Integration Complete - 18 Services Verified

--- a/assignment-service/assignment-service/src/main/resources/application.properties
+++ b/assignment-service/assignment-service/src/main/resources/application.properties
@@ -20,3 +20,7 @@ delivery.service.url=http://localhost:8086
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.assignmentservice=DEBUG
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
