--- a/notification-service/notification-service/src/main/resources/application.properties
+++ b/notification-service/notification-service/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.notificationservice=DEBUG
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
