--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.orderservice=DEBUG
+
+# JWT Configuration (SAME AS OTHER SERVICES)
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
