--- a/payment-service/payment-service/src/main/resources/application.properties
+++ b/payment-service/payment-service/src/main/resources/application.properties
@@ -20,3 +20,7 @@ payment.gateway.test.mode=true
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.paymentservice=DEBUG
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
