--- a/support-service/support-service/src/main/resources/application.properties
+++ b/support-service/support-service/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
 logging.level.com.fooddelivery.supportservice=DEBUG
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
