--- a/cart-service/cart-service/src/main/resources/application.properties
+++ b/cart-service/cart-service/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
