--- a/delivery-service/delivery-service/src/main/resources/application.properties
+++ b/delivery-service/delivery-service/src/main/resources/application.properties
@@ -13,6 +13,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.deliveryservice=DEBUG
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
