--- a/menu-service/menu-service/src/main/resources/application.properties
+++ b/menu-service/menu-service/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
 logging.level.com.fooddelivery.menuservice=DEBUG
+
+# JWT Configuration (SAME AS AUTH SERVICE)
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
