--- a/review-service/review-service/src/main/resources/application.properties
+++ b/review-service/review-service/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.reviewservice=DEBUG
+
+# JWT Configuration
+jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
+jwt.expiration=900000
