--- a/user-service/user-service/src/main/resources/application.properties
+++ b/user-service/user-service/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.application.name=user-service
 server.port=8081
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=Indiadaily@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,6 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Security - Disable auto-generated password
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
 # Logging
 logging.level.org.springframework.security=DEBUG
