--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -115,6 +115,16 @@ spring.cloud.gateway.routes[17].id=analytics-service
 spring.cloud.gateway.routes[17].uri=http://localhost:8093
 spring.cloud.gateway.routes[17].predicates[0]=Path=/api/analytics/**
 
+# Route 18: Admin Service
+spring.cloud.gateway.routes[18].id=admin-service
+spring.cloud.gateway.routes[18].uri=http://localhost:8098
+spring.cloud.gateway.routes[18].predicates[0]=Path=/api/admin/**
+
+# Route 19: Search Service
+spring.cloud.gateway.routes[19].id=search-service
+spring.cloud.gateway.routes[19].uri=http://localhost:8099
+spring.cloud.gateway.routes[19].predicates[0]=Path=/api/search/**,/api/search/autocomplete/**
+
 # ============================================
 
 # Logging
