--- a/search-service/search-service/src/main/resources/application.properties
+++ b/search-service/search-service/src/main/resources/application.properties
@@ -22,3 +22,32 @@ logging.level.com.fooddelivery.searchservice=DEBUG
 # JWT Configuration
 jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
 jwt.expiration=900000
+
+# ============================================
+# REDIS CACHE CONFIGURATION
+# ============================================
+
+# Redis Server
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.database=0
+
+# Redis Connection Pool
+spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.jedis.pool.max-idle=8
+spring.data.redis.jedis.pool.min-idle=0
+spring.data.redis.jedis.pool.max-wait=2000ms
+
+# Redis Timeout
+spring.data.redis.timeout=2000ms
+
+# Cache Configuration
+spring.cache.type=redis
+spring.cache.redis.time-to-live=600000
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=food-delivery:
+
+# Cache Names
+spring.cache.cache-names=restaurants,menuItems,searchResults,popularItems
