--- a/payment-service/payment-service/src/main/resources/application.properties
+++ b/payment-service/payment-service/src/main/resources/application.properties
@@ -1,26 +1,68 @@
+# ============================================
+# APPLICATION CONFIGURATION
+# ============================================
 spring.application.name=payment-service
 server.port=8089
 
-# Database Configuration
+# ============================================
+# DATABASE CONFIGURATION
+# ============================================
 spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db
 spring.datasource.username=root
 spring.datasource.password=Indiadaily@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
+# ============================================
+# JPA CONFIGURATION
+# ============================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Payment Gateway Configuration (Mock)
+# ============================================
+# RAZORPAY CONFIGURATION
+# ============================================
+
+# Razorpay API Keys (Your Test Keys)
+razorpay.key.id=rzp_test_S7dzWtY5DsSafC
+razorpay.key.secret=1j1L3S0hezhqzM3jmKiIRlbE
+
+# Razorpay Settings
+razorpay.currency=INR
+razorpay.company.name=Food Delivery Platform
+
+# Payment URLs
+payment.callback.url=http://localhost:8089/api/payments/callback
+payment.success.url=http://localhost:8089/api/payments/success
+payment.failure.url=http://localhost:8089/api/payments/failure
+
+# ============================================
+# PAYMENT GATEWAY CONFIGURATION
+# ============================================
 payment.gateway.enabled=true
 payment.gateway.test.mode=true
 
-# Logging
-logging.level.org.springframework.web=INFO
-logging.level.com.fooddelivery.paymentservice=DEBUG
+# ============================================
+# ORDER SERVICE INTEGRATION
+# ============================================
+order.service.url=http://localhost:8084/api/orders
 
-# JWT Configuration
+# ============================================
+# JWT CONFIGURATION
+# ============================================
 jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
 jwt.expiration=900000
+
+# ============================================
+# LOGGING CONFIGURATION
+# ============================================
+logging.level.org.springframework.web=INFO
+logging.level.com.fooddelivery.paymentservice=DEBUG
+logging.level.com.razorpay=DEBUG
+
+# ============================================
+# ACTUATOR ENDPOINTS (Optional - for monitoring)
+# ============================================
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
