Complete Order Service with Payment integration

--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,17 +1,23 @@
+# ===============================
 # Application
+# ===============================
 spring.application.name=api-gateway
 server.port=8080
 
 # Disable Database
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-# Gateway
+# Enable Gateway
 spring.cloud.gateway.enabled=true
 
+# ===============================
 # JWT Configuration
+# ===============================
 jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
 
-# CORS - FIXED!
+# ===============================
+# GLOBAL CORS CONFIG
+# ===============================
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS,PATCH
@@ -19,120 +25,120 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
 spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
 
-# ============================================
-# ALL SERVICE ROUTES (SEQUENTIAL 0-17)
-# ============================================
+# =========================================================
+# ALL SERVICE ROUTES (SEQUENCED PORTS 8081 ? 8100)
+# =========================================================
 
-# Route 0: Auth Service
+# 0. Auth Service (NO JWT)
 spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8097
+spring.cloud.gateway.routes[0].uri=http://localhost:8081
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
 
-# Route 1: User Service
+# 1. User Service
 spring.cloud.gateway.routes[1].id=user-service
-spring.cloud.gateway.routes[1].uri=http://localhost:8081
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
 
-# Route 2: Restaurant Service
+# 2. Restaurant Service
 spring.cloud.gateway.routes[2].id=restaurant-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8082
+spring.cloud.gateway.routes[2].uri=http://localhost:8083
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/restaurants/**
 
-# Route 3: Menu Service
+# 3. Menu Service
 spring.cloud.gateway.routes[3].id=menu-service
-spring.cloud.gateway.routes[3].uri=http://localhost:8083
+spring.cloud.gateway.routes[3].uri=http://localhost:8084
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/menu/**
 
-# Route 4: Order Service
+# 4. Order Service
 spring.cloud.gateway.routes[4].id=order-service
-spring.cloud.gateway.routes[4].uri=http://localhost:8084
+spring.cloud.gateway.routes[4].uri=http://localhost:8085
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/orders/**
 
-# Route 5: Cart Service
+# 5. Cart Service
 spring.cloud.gateway.routes[5].id=cart-service
-spring.cloud.gateway.routes[5].uri=http://localhost:8091
+spring.cloud.gateway.routes[5].uri=http://localhost:8086
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/cart/**
 
-# Route 6: Payment Service
+# 6. Payment Service
 spring.cloud.gateway.routes[6].id=payment-service
-spring.cloud.gateway.routes[6].uri=http://localhost:8089
+spring.cloud.gateway.routes[6].uri=http://localhost:8087
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/payments/**
 
-# Route 7: Notification Service
+# 7. Notification Service
 spring.cloud.gateway.routes[7].id=notification-service
-spring.cloud.gateway.routes[7].uri=http://localhost:8085
+spring.cloud.gateway.routes[7].uri=http://localhost:8088
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/notifications/**
 
-# Route 8: Delivery Service
+# 8. Delivery Service
 spring.cloud.gateway.routes[8].id=delivery-service
-spring.cloud.gateway.routes[8].uri=http://localhost:8086
+spring.cloud.gateway.routes[8].uri=http://localhost:8089
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/deliveries/**
 
-# Route 9: Location Service
+# 9. Location Service
 spring.cloud.gateway.routes[9].id=location-service
-spring.cloud.gateway.routes[9].uri=http://localhost:8087
+spring.cloud.gateway.routes[9].uri=http://localhost:8090
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/locations/**
 
-# Route 10: Assignment Service
+# 10. Assignment Service
 spring.cloud.gateway.routes[10].id=assignment-service
-spring.cloud.gateway.routes[10].uri=http://localhost:8088
+spring.cloud.gateway.routes[10].uri=http://localhost:8091
 spring.cloud.gateway.routes[10].predicates[0]=Path=/api/assignments/**
 
-# Route 11: Review Service (BOTH PATHS)
+# 11. Review + Delivery Rating Service
 spring.cloud.gateway.routes[11].id=review-service
-spring.cloud.gateway.routes[11].uri=http://localhost:8090
+spring.cloud.gateway.routes[11].uri=http://localhost:8092
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/reviews/**,/api/delivery-ratings/**
 
-# Route 12: Promo Service
+# 12. Promo / Coupon Service
 spring.cloud.gateway.routes[12].id=promo-service
-spring.cloud.gateway.routes[12].uri=http://localhost:8092
+spring.cloud.gateway.routes[12].uri=http://localhost:8093
 spring.cloud.gateway.routes[12].predicates[0]=Path=/api/coupons/**
 
-
-
-# Route 13: Wallet Service
+# 13. Wallet Service
 spring.cloud.gateway.routes[13].id=wallet-service
 spring.cloud.gateway.routes[13].uri=http://localhost:8094
 spring.cloud.gateway.routes[13].predicates[0]=Path=/api/wallet/**
 
-# Route 14: Settlement Service
+# 14. Settlement Service
 spring.cloud.gateway.routes[14].id=settlement-service
 spring.cloud.gateway.routes[14].uri=http://localhost:8095
-spring.cloud.gateway.routes[14].predicates[0]=Path=/api/settlement/**
+spring.cloud.gateway.routes[14].predicates[0]=Path=/api/settlements/**
 
-# Route 15: Support Service
+# 15. Support Service
 spring.cloud.gateway.routes[15].id=support-service
 spring.cloud.gateway.routes[15].uri=http://localhost:8096
 spring.cloud.gateway.routes[15].predicates[0]=Path=/api/support/**
 
-# Route 16: Delivery Partner Service
+# 16. Delivery Partner Service
 spring.cloud.gateway.routes[16].id=delivery-partner-service
-spring.cloud.gateway.routes[16].uri=http://localhost:8086
+spring.cloud.gateway.routes[16].uri=http://localhost:8097
 spring.cloud.gateway.routes[16].predicates[0]=Path=/api/delivery/partners/**
 
-# Route 17: Analytics Service
+# 17. Analytics Service
 spring.cloud.gateway.routes[17].id=analytics-service
-spring.cloud.gateway.routes[17].uri=http://localhost:8093
+spring.cloud.gateway.routes[17].uri=http://localhost:8098
 spring.cloud.gateway.routes[17].predicates[0]=Path=/api/analytics/**
 
-# Route 18: Admin Service
+# 18. Admin Service
 spring.cloud.gateway.routes[18].id=admin-service
-spring.cloud.gateway.routes[18].uri=http://localhost:8098
+spring.cloud.gateway.routes[18].uri=http://localhost:8099
 spring.cloud.gateway.routes[18].predicates[0]=Path=/api/admin/**
 
-# Route 19: Search Service
+# 19. Search Service
 spring.cloud.gateway.routes[19].id=search-service
-spring.cloud.gateway.routes[19].uri=http://localhost:8099
+spring.cloud.gateway.routes[19].uri=http://localhost:8100
 spring.cloud.gateway.routes[19].predicates[0]=Path=/api/search/**,/api/search/autocomplete/**
 
-# ============================================
-
+# ===============================
 # Logging
+# ===============================
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.com.fooddelivery.apigateway=DEBUG
 logging.level.reactor.netty=DEBUG
 
-# Actuator - EXPOSE ROUTES!
+# ===============================
+# Actuator
+# ===============================
 management.endpoints.web.exposure.include=health,info,gateway
 management.endpoint.health.show-details=always
 management.endpoint.gateway.enabled=true
