--- a/payment-service/payment-service/src/main/resources/application.properties
+++ b/payment-service/payment-service/src/main/resources/application.properties
@@ -60,6 +60,10 @@ jwt.expiration=900000
 logging.level.org.springframework.web=INFO
 logging.level.com.fooddelivery.paymentservice=DEBUG
 logging.level.com.razorpay=DEBUG
+# Test Mode (skip signature verification for development)
+razorpay.test.mode=true
+
+
 
 # ============================================
 # ACTUATOR ENDPOINTS (Optional - for monitoring)
