--- a/order-service/order-service/pom.xml
+++ b/order-service/order-service/pom.xml
@@ -30,6 +30,15 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <!-- Jackson Datatype JSR310 (Java 8 Date/Time) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
