--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -1,22 +1,39 @@
+# Application Name
 spring.application.name=order-service
+
+# Server Port
 server.port=8084
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db
+spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db?useSSL=false&serverTimezone=Asia/Kolkata&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Indiadaily@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# HikariCP Connection Pool
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
-# Logging
-logging.level.org.springframework.web=INFO
+# Logging Configuration
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
 logging.level.com.fooddelivery.orderservice=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# JWT Configuration (SAME AS OTHER SERVICES)
+# JWT Configuration
 jwt.secret=foodDeliverySecretKeyForJWTToken2026VerySecureAndLongKey
 jwt.expiration=900000
+
+# Payment Service Configuration
+payment.service.url=http://localhost:8089
