--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -31,67 +31,67 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
 
 # 0. Auth Service (NO JWT)
 spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].uri=http://localhost:8097
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
 
 # 1. User Service
 spring.cloud.gateway.routes[1].id=user-service
-spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].uri=http://localhost:8081
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
 
 # 2. Restaurant Service
 spring.cloud.gateway.routes[2].id=restaurant-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8083
+spring.cloud.gateway.routes[2].uri=http://localhost:8082
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/restaurants/**
 
 # 3. Menu Service
 spring.cloud.gateway.routes[3].id=menu-service
-spring.cloud.gateway.routes[3].uri=http://localhost:8084
+spring.cloud.gateway.routes[3].uri=http://localhost:8083
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/menu/**
 
 # 4. Order Service
 spring.cloud.gateway.routes[4].id=order-service
-spring.cloud.gateway.routes[4].uri=http://localhost:8085
+spring.cloud.gateway.routes[4].uri=http://localhost:8084
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/orders/**
 
 # 5. Cart Service
 spring.cloud.gateway.routes[5].id=cart-service
-spring.cloud.gateway.routes[5].uri=http://localhost:8086
+spring.cloud.gateway.routes[5].uri=http://localhost:8091
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/cart/**
 
 # 6. Payment Service
 spring.cloud.gateway.routes[6].id=payment-service
-spring.cloud.gateway.routes[6].uri=http://localhost:8087
+spring.cloud.gateway.routes[6].uri=http://localhost:8089
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/payments/**
 
 # 7. Notification Service
 spring.cloud.gateway.routes[7].id=notification-service
-spring.cloud.gateway.routes[7].uri=http://localhost:8088
+spring.cloud.gateway.routes[7].uri=http://localhost:8085
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/notifications/**
 
 # 8. Delivery Service
 spring.cloud.gateway.routes[8].id=delivery-service
-spring.cloud.gateway.routes[8].uri=http://localhost:8089
+spring.cloud.gateway.routes[8].uri=http://localhost:8086
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/deliveries/**
 
 # 9. Location Service
 spring.cloud.gateway.routes[9].id=location-service
-spring.cloud.gateway.routes[9].uri=http://localhost:8090
+spring.cloud.gateway.routes[9].uri=http://localhost:8087
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/locations/**
 
 # 10. Assignment Service
 spring.cloud.gateway.routes[10].id=assignment-service
-spring.cloud.gateway.routes[10].uri=http://localhost:8091
+spring.cloud.gateway.routes[10].uri=http://localhost:8088
 spring.cloud.gateway.routes[10].predicates[0]=Path=/api/assignments/**
 
 # 11. Review + Delivery Rating Service
 spring.cloud.gateway.routes[11].id=review-service
-spring.cloud.gateway.routes[11].uri=http://localhost:8092
+spring.cloud.gateway.routes[11].uri=http://localhost:8090
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/reviews/**,/api/delivery-ratings/**
 
 # 12. Promo / Coupon Service
 spring.cloud.gateway.routes[12].id=promo-service
-spring.cloud.gateway.routes[12].uri=http://localhost:8093
+spring.cloud.gateway.routes[12].uri=http://localhost:8092
 spring.cloud.gateway.routes[12].predicates[0]=Path=/api/coupons/**
 
 # 13. Wallet Service
@@ -109,24 +109,24 @@ spring.cloud.gateway.routes[15].id=support-service
 spring.cloud.gateway.routes[15].uri=http://localhost:8096
 spring.cloud.gateway.routes[15].predicates[0]=Path=/api/support/**
 
-# 16. Delivery Partner Service
-spring.cloud.gateway.routes[16].id=delivery-partner-service
-spring.cloud.gateway.routes[16].uri=http://localhost:8097
+# 16. Delivery  Service
+spring.cloud.gateway.routes[16].id=delivery-service
+spring.cloud.gateway.routes[16].uri=http://localhost:8086
 spring.cloud.gateway.routes[16].predicates[0]=Path=/api/delivery/partners/**
 
 # 17. Analytics Service
 spring.cloud.gateway.routes[17].id=analytics-service
-spring.cloud.gateway.routes[17].uri=http://localhost:8098
+spring.cloud.gateway.routes[17].uri=http://localhost:8093
 spring.cloud.gateway.routes[17].predicates[0]=Path=/api/analytics/**
 
 # 18. Admin Service
 spring.cloud.gateway.routes[18].id=admin-service
-spring.cloud.gateway.routes[18].uri=http://localhost:8099
+spring.cloud.gateway.routes[18].uri=http://localhost:8098
 spring.cloud.gateway.routes[18].predicates[0]=Path=/api/admin/**
 
 # 19. Search Service
 spring.cloud.gateway.routes[19].id=search-service
-spring.cloud.gateway.routes[19].uri=http://localhost:8100
+spring.cloud.gateway.routes[19].uri=http://localhost:8099
 spring.cloud.gateway.routes[19].predicates[0]=Path=/api/search/**,/api/search/autocomplete/**
 
 # ===============================
