--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -39,6 +39,18 @@ spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=http://localhost:8081
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
 
+# 1A. Address Service (ADD THIS - SAME PORT AS USER SERVICE)
+spring.cloud.gateway.routes[20].id=address-service
+spring.cloud.gateway.routes[20].uri=http://localhost:8081
+spring.cloud.gateway.routes[20].predicates[0]=Path=/api/addresses/**
+
+
+# 20A. Favorites Service
+spring.cloud.gateway.routes[21].id=favorites-service
+spring.cloud.gateway.routes[21].uri=http://localhost:8081
+spring.cloud.gateway.routes[21].predicates[0]=Path=/api/favorites/**
+
+
 # 2. Restaurant Service
 spring.cloud.gateway.routes[2].id=restaurant-service
 spring.cloud.gateway.routes[2].uri=http://localhost:8082
