--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -37,3 +37,6 @@ jwt.expiration=900000
 
 # Payment Service Configuration
 payment.service.url=http://localhost:8089
+
+#  Delivery Service URL
+delivery.service.url=http://localhost:8086
