--- a/user-service/user-service/src/main/resources/application.properties
+++ b/user-service/user-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=user-service
 server.port=8081
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db?useSSL=false&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=Indiadaily@2025
